--- a/david.css
+++ b/david.css
@@ -1,4 +1,7 @@
-
+<!-- CSS Sheet created by David Scheffler
+04. April 2021 small changes to the alignments ...
+03. April 2021 first Draft
+//-->
 
 .center {
   text-align: center;
@@ -28,4 +31,9 @@ body {
 }
   
 h3 {
-      color:"White"}
+  color:"White"
+}
+
+h2 {
+  color:"Red"; 
+}
