--- a/david.css
+++ b/david.css
@@ -1,7 +1,7 @@
-<!-- CSS Sheet created by David Scheffler
+/* CSS Sheet created by David Scheffler
 04. April 2021 small changes to the alignments ...
 03. April 2021 first Draft
-//-->
+*/
 
 .center {
   text-align: center;
