--- a/david.css
+++ b/david.css
@@ -11,7 +11,8 @@
   margin-left: auto;
   margin-right: auto;
 }
-  
+
+/*
 * {
   box-sizing: border-box;
 }
@@ -29,7 +30,7 @@ body {
   min-width: 100%; 
   min-height: 100%;
 }
-  
+*/
 /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
